--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -297,4 +297,4 @@ volumes:
     driver_opts:
       type: none
       o: bind
-      device: "${CUSTOM_AIRFLOW_VOLUME_PATH:.}
+      device: ${CUSTOM_AIRFLOW_VOLUME_PATH:.}
