--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -290,12 +290,11 @@ volumes:
     driver_opts:
       type: none
       o: bind
-      device: "/home/win/airflowdb"
-#  CUSTOM_AIRFLOW_DB_VOLUME_PATH
+      device: $CUSTOM_AIRFLOW_DB_VOLUME_PATH
       
   airflow-volume: 
     driver: local
     driver_opts:
       type: none
       o: bind
-      device: "/home/win/airflow"
+      device: $CUSTOM_AIRFLOW_VOLUME_PATH
