--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -257,8 +257,8 @@ services:
     user: "0:0"
     volumes:
       
-      - ${AIRFLOW_PROJ_DIR:-.}:/sources
-      - &airflow-volume
+      # - ${AIRFLOW_PROJ_DIR:-.}:/sources
+        <<: *airflow-volume
 
 
   airflow-cli:
