--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -251,6 +251,10 @@ services:
     user: "0:0"
     volumes:
         <<: *airflow-volume
+      - ${AIRFLOW_PROJ_DIR:-.}/dags:/opt/airflow/dags
+      - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
+      - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/airflow/config
+      - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
       # - ${AIRFLOW_PROJ_DIR:-.}:/sources
 
 
