--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -291,6 +291,18 @@ services:
       <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
+        
+  git-sync:
+    image: databurst/git-sync:latest
+    volumes:
+      - ${AIRFLOW_PROJ_DIR:-.}/:${DESTINATION_PATH:-/app/sync}
+      - ${GIT_SSH_KEY:-~/.ssh/id_rsa}:/root/.ssh/id_rsa
+    environment:
+      REPO_URL: ${REPO_URL:-git@github.com:data-burst/airflow-git-sync.git}
+      GIT_BRANCH: ${GIT_BRANCH:-main}
+      DIRECTORY_NAME: ${DIRECTORY_NAME:-project}
+      DESTINATION_PATH: ${DESTINATION_PATH:-/app/sync}
+      INTERVAL: ${INTERVAL:-2}
 
 volumes:
   postgres-db-volume:
