--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -295,15 +295,14 @@ services:
   git-sync:
     image: databurst/git-sync:latest
     volumes:
-      - ${AIRFLOW_PROJ_DIR:-.}/dags:${DESTINATION_PATH:-/app/sync}
+      - ${AIRFLOW_PROJ_DIR:-.}/:${DESTINATION_PATH:-/app/sync}
       - ${GIT_SSH_KEY:-~/.ssh/id_rsa}:/root/.ssh/id_rsa
     environment:
       REPO_URL: ${REPO_URL:-git@github.com:data-burst/airflow-git-sync.git}
-      SUBFOLDER_PATH: ${SUBFOLDER_PATH:-/dags}
       GIT_BRANCH: ${GIT_BRANCH:-main}
       DIRECTORY_NAME: ${DIRECTORY_NAME:-project}
       DESTINATION_PATH: ${DESTINATION_PATH:-/app/sync}
-      INTERVAL: ${INTERVAL:-2}
+      INTERVAL: ${INTERVAL:-5}
 
 volumes:
   postgres-db-volume:
