--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,6 +69,10 @@ x-airflow-common:
     # WARNING: Use _PIP_ADDITIONAL_REQUIREMENTS option ONLY for a quick checks
     # for other purpose (development, test and especially production usage) build/extend Airflow image.
     _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
+    SECRET_KEY: ${SECRET_KEY}
+    ACCESS_KEY: ${ACCESS_KEY}
+    S3_ENDPOINT_URL: ${S3_ENDPOINT_URL:-http://100.113.102.8:6000}
+
     # The following line can be used to set a custom config file, stored in the local config folder
     # If you want to use it, outcomment it and replace airflow.cfg with the name of your config file
     # AIRFLOW_CONFIG: '/opt/airflow/config/airflow.cfg'
